--- a/YourJourney/app/src/main/res/layout/activity_main.xml
+++ b/YourJourney/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,12 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="30dp">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingHorizontal="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         app:itemBackground="@drawable/background_shape"
         app:menu="@menu/menu"
