--- a/YourJourney/app/src/main/res/layout/activity_register.xml
+++ b/YourJourney/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,9 @@
       android:layout_marginHorizontal="20dp"
       android:hint="password"
       android:inputType="textPassword"
+      android:layout_marginVertical="10dp"
       android:id="@+id/reg_pass"/>
+
   <TextView
       android:id="@+id/loginLink"
       android:layout_width="match_parent"
@@ -81,7 +83,7 @@
       android:text="Already have an account? Login Here"
       android:textColor="@android:color/holo_blue_dark"
       android:gravity="center"
-      android:layout_marginTop="20dp"/>
+      android:layout_marginTop="15dp"/>
 
   <Button
       android:layout_width="match_parent"
