--- a/YourJourney/app/src/main/res/layout/fragment_home.xml
+++ b/YourJourney/app/src/main/res/layout/fragment_home.xml
@@ -17,21 +17,42 @@
 
             <include layout="@layout/header_main" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="10dp"
-                android:text="Daftar Kategori"
-                android:textColor="@android:color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/search_input_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
+                app:endIconMode="clear_text"
+                android:hint="Search...">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/search_input_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/white_bg"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:id="@+id/daftar_kategori"
+                android:layout_marginHorizontal="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Daftar Kategori"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -39,7 +60,6 @@
                     android:orientation="horizontal"
                     android:layout_marginBottom="16dp">
 
-                    <!-- Hotel Card -->
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cvHotel"
                         android:layout_width="0dp"
@@ -74,13 +94,12 @@
                                 android:text="Hotel"
                                 android:layout_margin="8dp"
                                 android:textColor="@android:color/black"
-                                android:textSize="14sp" />
+                                android:textSize="17sp" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/imgHotel"
-                                android:layout_toRightOf="@id/tvHotel"
                                 android:layout_alignParentEnd="true"
                                 android:layout_margin="5dp"
                                 android:src="@drawable/ic_arrow"
@@ -90,7 +109,7 @@
 
                     </androidx.cardview.widget.CardView>
 
-                    <!-- Kuliner Card -->
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cvKuliner"
                         android:layout_width="0dp"
@@ -125,13 +144,12 @@
                                 android:text="Kuliner"
                                 android:layout_margin="8dp"
                                 android:textColor="@android:color/black"
-                                android:textSize="14sp" />
+                                android:textSize="17sp" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/imgKuliner"
-                                android:layout_toRightOf="@id/tvKuliner"
                                 android:layout_alignParentEnd="true"
                                 android:layout_margin="5dp"
                                 android:src="@drawable/ic_arrow"
@@ -149,7 +167,6 @@
                     android:orientation="horizontal"
                     android:layout_marginBottom="16dp">
 
-                    <!-- Tempat Ibadah Card -->
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cvPrayPlace"
                         android:layout_width="0dp"
@@ -184,13 +201,12 @@
                                 android:text="Tempat Ibadah"
                                 android:layout_margin="8dp"
                                 android:textColor="@android:color/black"
-                                android:textSize="14sp" />
+                                android:textSize="17sp" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/imgPrayPlace"
-                                android:layout_toRightOf="@id/tvPrayPlace"
                                 android:layout_alignParentEnd="true"
                                 android:layout_margin="5dp"
                                 android:src="@drawable/ic_arrow"
@@ -235,13 +251,12 @@
                                 android:text="Wisata"
                                 android:layout_margin="8dp"
                                 android:textColor="@android:color/black"
-                                android:textSize="14sp" />
+                                android:textSize="17sp" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_below="@+id/imgWisata"
-                                android:layout_toRightOf="@id/tvWisata"
                                 android:layout_alignParentEnd="true"
                                 android:layout_margin="5dp"
                                 android:src="@drawable/ic_arrow"
