--- a/YourJourney/app/src/main/res/layout/fragment_home.xml
+++ b/YourJourney/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/search_input_layout"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="55dp"
                 android:layout_marginHorizontal="10dp"
                 app:endIconMode="clear_text"
                 android:hint="Search...">
@@ -43,12 +43,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/daftar_kategori"
-                android:layout_marginHorizontal="10dp">
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="10dp"
                     android:text="Daftar Kategori"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
